# genai-task-management-1

task-management-agents/: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml  requirements.txt  setup-gcloud.sh
task-management-agents/src/: __init__.py
task-management-agents/src/agents/: __init__.py
task-management-agents/src/agents/calendar_agent/: __init__.py  agent.py
task-management-agents/src/agents/gmail_agent/: __init__.py  agent.py
task-management-agents/src/agents/notes_agent/: __init__.py  agent.py
task-management-agents/src/agents/orchestrator/: __init__.py  agent.py
task-management-agents/src/agents/task_agent/: __init__.py  agent.py
task-management-agents/src/api/: __init__.py  main.py  routes.py
task-management-agents/src/auth/: __init__.py  iam_middleware.py
task-management-agents/src/mcp_servers/: __init__.py  calendar_server.py  gmail_server.py  notes_server.py  task_server.py
task-management-agents/src/services/: __init__.py  calendar_service.py  firestore_session.py  gmail_service.py  google_auth.py  notes_service.py  task_service.py
task-management-agents/tests/: __init__.py  test_agents.py  test_mcp_servers.py  test_services.py
venev/conda-meta/: created_at  history  libexpat-2.7.5-h50f4ffc_0.json  libffi-3.4.4-hca03da5_1.json  ncurses-6.5-hee39554_0.json  openssl-3.5.6-ha0b305a_0.json  pip-26.0.1-pyhc872135_1.json  python-3.12.13-hd7e0f33_1.json  readline-8.3-h0b18652_0.json  sqlite-3.51.2-h67002bf_0.json  tk-8.6.15-hcd8a7d5_0.json  xz-5.8.2-h8bbcb1d_0.json  zlib-1.3.1-h5f15de7_0.json
(+183 files in other folders)
